--- a/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
@@ -37,8 +37,8 @@
 <table class="barattach-2">
     <tr>
         <td>
-            <label class="topictable">Master Income</label>
-            <a href="/IncomeMaster/CreateIncomeMaster"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" class="imgadd" id="admincreateDisable" /></a>
+            <label class="topicmargin-size67">Master Income</label>
+            <a href="/IncomeMaster/CreateIncomeMaster"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" id="admincreateDisable" /></a>
             <div class="topicText">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
         </td>
     </tr>
@@ -47,9 +47,9 @@
     <table class="table table-striped">
         <thead class="bgthead">
             <tr>
-                <th>No.</th>
-                <th class="hidecolumn">ID</th>
-                <th>รายละเอียด</th>
+                <th class="Rowpointer">No.</th>
+                <th class="hidecolumn Rowpointer">ID</th>
+                <th class="Rowpointer">รายละเอียด</th>
                 <th></th>
             </tr>
         </thead>
