--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -90,20 +90,20 @@
             <ul class="form-style-1">
                 <li>
                     <label>เลขที่ใบสั่งงาน</label>
-                    <input type="text" id="txtJobNo" name="field1" class="field-divided" placeholder="เลขที่ใบสั่งงาน" disabled />
+                    <input type="text" id="txtJobNo" name="field1" class="field-divided" placeholder="" disabled />
                 </li>
                 <li>
                     <label class="label-2" style="margin-right: 43%;">วันที่</label>&nbsp;<label class="label-2">ยานพาหนะ</label>
                 </li>
                 <li>
-                    <input type="text" id="dtJobDate" class="field-divided" placeholder="วันที่"  required />&nbsp;<input type="text" id="txtCar" name="field1" class="field-divided" placeholder="รถปิกอัพ" autofocus/>
+                    <input type="text" id="dtJobDate" class="field-divided" placeholder=""  required />&nbsp;<input type="text" id="txtCar" name="field1" class="field-divided" placeholder="รถปิกอัพ" autofocus/>
                     <input type="hidden" id="hidJobDate" />
                 </li>
                 <li>
                     <label class="label-2">วันเริ่มทำงาน<span class="required">*</span></label>&nbsp;<label class="label-2">วันจบงาน<span class="required">*</span></label>
                 </li>
                 <li>
-                    <input type="text" id="dtSWorking" class="field-divided" placeholder="วันเริ่มทำงาน" required/>&nbsp;<input type="text" id="dtEWorking" class="field-divided" placeholder="วันจบงาน" onchange="DateWorking()" required />
+                    <input type="text" id="dtSWorking" class="field-divided" placeholder="" required/>&nbsp;<input type="text" id="dtEWorking" class="field-divided" placeholder="" onchange="DateWorking()" required />
                     <input type="hidden" id="hidSWorking" /><input type="hidden" id="hiddtEWorking" />
                 </li>
                 <li>
@@ -111,7 +111,7 @@
 
                 </li>
                 <li>
-                    <input type="text" id="txtJobBy" name="field1" class="field-divided" placeholder="รับงานโดย" required/>&nbsp;<input type="text" id="txtIssuedBy" name="field1" class="field-divided" placeholder="ออกโดย" required/>
+                    <input type="text" id="txtJobBy" name="field1" class="field-divided" placeholder="" required/>&nbsp;<input type="text" id="txtIssuedBy" name="field1" class="field-divided" placeholder="" required/>
                 </li>
                 <li>
                     <label class="label-5">ชนิดงาน</label>&nbsp;<label class="label-2">Status</label>
@@ -139,25 +139,25 @@
                     <label class="label-2" style="margin-right: 37%;">โทรศัพท์</label>&nbsp;<label class="label-2">แฟกซ์</label>
                 </li>
                 <li>
-                    <input type="text" id="txtTel" name="field2" class="field-divided" placeholder="โทรศัพท์" disabled />&nbsp;<input type="text" name="field1" id="txtFax" class="field-divided" placeholder="แฟกซ์" disabled />
+                    <input type="text" id="txtTel" name="field2" class="field-divided" placeholder="" disabled />&nbsp;<input type="text" name="field1" id="txtFax" class="field-divided" placeholder="" disabled />
                 </li>
                 <li>
                     <label class="label-2" style="margin-right: 31.2%;">บุคคลติดต่อ</label>&nbsp;<label class="label-2">ผู้ประสานงาน</label>
                 </li>
                 <li>
-                    <input type="text" id="txtContact" name="field1" class="field-divided" placeholder="บุคคลติดต่อ" disabled />&nbsp;<input type="text" name="field2" id="txtCoWorker" class="field-divided" placeholder="ผู้ประสานงาน" disabled />
+                    <input type="text" id="txtContact" name="field1" class="field-divided" placeholder="" disabled />&nbsp;<input type="text" name="field2" id="txtCoWorker" class="field-divided" placeholder="" disabled />
                 </li>
                 <li>
                     <label class="label-2">ที่อยู่</label>
                 </li>
                 <li>
-                    <textarea name="field5" id="txtAddress" class="field-long field-textarea" placeholder="ที่อยู่" disabled></textarea>
+                    <textarea name="field5" id="txtAddress" class="field-long field-textarea" placeholder="" disabled></textarea>
                 </li>
                 <li>
                     <label class="label-2">JobReference</label>
                 </li>
                <li>
-                   <input type="text" id="txtJobReference" name="field1" class="field-divided" placeholder="Job Reference" disabled />
+                   <input type="text" id="txtJobReference" name="field1" class="field-divided" placeholder="" disabled />
                    <input type="hidden" id="hidBDCID" />
                </li>
             </ul>
