--- a/Alpha/AlphaMvc/Views/JobOrder/IndexJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/IndexJobOrder.cshtml
@@ -18,14 +18,14 @@
     <table class="table table-striped">
         <thead class="bgthead">
             <tr>
-                <th>No.</th>
-                <th>Job No.</th>
-                <th>วันที่</th>
-                <th>ลูกค้า</th>
-                <th>เบอร์โทร</th>
-                <th class="hideANDseek">บุคคลติดต่อ</th>
-                <th class="hideANDseek">ผู้ประสานงาน</th>
-                <th class="hideANDseek">หมายเหตุ</th>
+                <th class="Rowpointer">No.</th>
+                <th class="Rowpointer">Job No.</th>
+                <th class="Rowpointer">วันที่</th>
+                <th class="Rowpointer">ลูกค้า</th>
+                <th class="Rowpointer">เบอร์โทร</th>
+                <th class="hideANDseek Rowpointer">บุคคลติดต่อ</th>
+                <th class="hideANDseek Rowpointer">ผู้ประสานงาน</th>
+                <th class="hideANDseek Rowpointer">หมายเหตุ</th>
                 <th></th>
             </tr>
         </thead>
