--- a/Alpha/AlphaMvc/Views/Login/IndexLogin.cshtml
+++ b/Alpha/AlphaMvc/Views/Login/IndexLogin.cshtml
@@ -15,10 +15,10 @@
         </div>
 
         <div class="container">
-            <label class="lblStyle"><b class="lbluser">Username</b></label>
+            @*<label class="lblStyle"><b class="lbluser">Username</b></label>*@
             <input id="txtUserName" type="text" placeholder="UserName">
             <br />
-            <label class="lblStyle"><b class="lblpsw">Password</b></label>
+            @*<label class="lblStyle"><b class="lblpsw">Password</b></label>*@
             <input id="txtPassword" type="password" placeholder="Password">
             <br />
             <button type="button" value="Login" onClick="UserLogin()"/>Login
