--- a/Alpha/AlphaMvc/Content/calendar/fullcalendar.css
+++ b/Alpha/AlphaMvc/Content/calendar/fullcalendar.css
@@ -3,6 +3,25 @@
  * Docs & License: http://fullcalendar.io/
  * (c) 2016 Adam Shaw
  */
+@media screen and (max-width : 930px) {
+    #calendar
+    {
+        margin: 0 auto; 
+        width: 90% !important;
+        margin-top: 20px;
+    }
+}
+@media screen and (max-width : 760px) {
+    .fc .fc-button-group > :first-child { /* same */
+	    margin-left: 0;
+        width: 145px !important;
+    }
+    .fc .fc-button-group > * { /* extra precedence b/c buttons have margin set to zero */
+	    float: left;
+	    margin: 0 0 0 -1px;
+        width: 145px !important;
+    }
+}
 #calendar
 {
     margin: 0 auto;
