--- a/Alpha/AlphaMvc/Content/custom.css
+++ b/Alpha/AlphaMvc/Content/custom.css
@@ -1512,8 +1512,10 @@ th {
 .table-hover > tbody > tr:hover > td,
 .table-hover > tbody > tr:hover > th {
   /*background-color: #f5f5f5;*/
-  background-color: #c7dfd3;
+  /*background-color: #c7dfd3;*/
+  background-color: #fcbdb1;
   cursor: pointer;
+  
 }
 
 table col[class*="col-"] {
