--- a/Alpha/AlphaMvc/Views/Authorization/IndexAuthorization.cshtml
+++ b/Alpha/AlphaMvc/Views/Authorization/IndexAuthorization.cshtml
@@ -43,9 +43,9 @@
     <table class="table table-striped">
         <thead class="bgthead">
             <tr>
-                <th>No.</th>
+                <th class="Rowpointer">No.</th>
                 <th class="hidecolumn">ID</th>
-                <th>UserName</th>
+                <th class="Rowpointer">UserName</th>
                 <th></th>
             </tr>
         </thead>
