--- a/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
+++ b/Alpha/AlphaMvc/Views/BDC/IndexBDC.cshtml
@@ -39,8 +39,8 @@
 <table class="barattach-2">
     <tr>
         <td>
-            <label class="topictable">BreakDownCost</label>
-            <a href="/BDC/CreateBDC"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" class="imgadd" id="BDCcreateDisable"/></a>
+            <label class="topicmargin-size60-2">BreakDownCost</label>
+            <a href="/BDC/CreateBDC"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" id="BDCcreateDisable"/></a>
             <input id="chkShowAll" type="checkbox" class="chkShowAllinput" onchange="GetChecked(this)">
             <label for="chkShowAll" class="chkShowAll">Show All</label>
             <div class="topicText">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
@@ -52,13 +52,13 @@
     <table class="table table-striped">
         <thead class="bgthead">
             <tr>
-                <th>No.</th>
+                <th class="Rowpointer">No.</th>
                 <th class="hidecolumn">ID</th>
-                <th>Doc Version</th>
-                <th>ใบเสนอราคา</th>
-                <th>ราคาขาย</th>
-                <th>ราคาทุน</th>
-                <th>กำไร</th>
+                <th class="Rowpointer">Doc Version</th>
+                <th class="Rowpointer">ใบเสนอราคา</th>
+                <th class="Rowpointer">ราคาขาย</th>
+                <th class="Rowpointer">ราคาทุน</th>
+                <th class="Rowpointer">กำไร</th>
                 <th></th>
             </tr>
         </thead>
