--- a/Alpha/AlphaMvc/Views/Borrow/EditBorrow.cshtml
+++ b/Alpha/AlphaMvc/Views/Borrow/EditBorrow.cshtml
@@ -5,6 +5,38 @@
 <h2>Borrow Edit</h2>
 <script src="@Url.Content("~/Scripts/CUDS/JobOrderBorrow/EditJobOrderBorrow.js")" type="text/javascript"></script>
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
+<div class="modal fade" id="productDialog" role="dialog">
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Product</h4>
+            </div>
+            <div class="modal-body">
+                <div class="table-responsive">
+                    <table id="tblCustomer" class="table table-striped table-hover">
+                        <thead class="bgthead">
+                            <tr>
+                                <th class="Rowpointer">No.</th>
+                                <th class="hidecolumn">ID</th>
+                                <th class="Rowpointer">Serial</th>
+                                <th class="Rowpointer">หมายเลขเครื่อง</th>
+                                <th class="Rowpointer">ยี่ห้อ</th>
+                                <th class="Rowpointer">ขนาด</th>
+                                <th class="Rowpointer">รุ่น</th>
+                            </tr>
+                        </thead>
+                        <tbody id="productBody"></tbody>
+                    </table>
+                </div>
+                @*<ul class="pagination pagination-lg pager" id="myPager"></ul>*@
+            </div>
+        </div>
+
+    </div>
+</div>
 <style>
     table {
         background: #fbfbf1;
@@ -19,7 +51,11 @@
             <ul class="form-style-1">
                 <li>
                     <label>Serial <span class="required">*</span></label>
-                    <input type="text" id="txtSerial" name="field1" class="field-divided" placeholder="Serial" />
+                    <input type="text" id="txtSerial" class="field-divided" placeholder="Serial" disabled />&nbsp;<a href="#" data-toggle="modal" data-target="#productDialog" onclick="BrowseProduct()">
+                        <img src="@Url.Content("~/Images/search-engine.png")" class="btnimage" />
+                    </a>
+                    <input type="hidden" id="hidProductID" />
+                    <input type="hidden" id="hidJobID" />
                 </li>
                 <li>
                     <label class="label-small">ยี่ห้อ</label>&nbsp;<label class="label-small-3">รุ่น</label>
@@ -35,7 +71,7 @@
                 </li>
 
                 <li>
-                    <label>หมายเหตุ<span class="required">*</span></label>
+                    <label>หมายเหตุ</label>
                     <textarea name="field5" id="txtRemark" class="field-long field-textarea"></textarea>
                 </li>
 
