--- a/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
@@ -44,7 +44,7 @@
                     <label class="label-2" style="margin-right: 45%;">รุ่น<span class="required">*</span></label>&nbsp;<label class="label-2">อายุใช้งาน</label>
                 </li>
                 <li>
-                    <input type="text" id="txtModel" name="field2" class="field-divided" placeholder="รุ่น" />&nbsp;<input type="text" id="txtLifetime" name="field2" class="field-select-small" placeholder="อายุการใช้งาน" />&nbsp;<label class="label-3">ปี</label>
+                    <input type="text" id="txtModel" name="field2" class="field-divided" placeholder="รุ่น" />&nbsp;<input type="text" id="txtLifetime" name="field2" class="field-select-small" placeholder="อายุใช้งาน" />&nbsp;<label class="label-3">ปี</label>
                 </li>
                 <li>
                     <label class="label-big">รับเข้า<span class="required">*</span></label>&nbsp;<label class="label-small">หน่วยนับ</label>
