--- a/Alpha/AlphaMvc/Views/Products/IndexProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/IndexProducts.cshtml
@@ -39,8 +39,8 @@
 <table class="barattach-2">
     <tr>
         <td>
-            <label class="topictable">Products</label>
-            <a href="/Products/CreateProducts"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" class="imgadd" id="productscreateDisable" /></a>
+            <label class="topicmargin-size70">Products</label>
+            <a href="/Products/CreateProducts"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" id="productscreateDisable" /></a>
             <div class="topicText">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
         </td>
     </tr>
@@ -49,17 +49,17 @@
     <table class="table table-striped">
         <thead class="bgthead">
             <tr>
-                <th>No.</th>
+                <th class="Rowpointer">No.</th>
                 <th class="hidecolumn">ID</th>
-                <th>วันที่รับเข้า</th>
-                <th>Code</th>
-                <th class="hideANDseek">หมายเลขเครื่อง</th>
-                <th class="hideANDseek">รายละเอียด</th>
-                <th class="hideANDseek">ยี่ห้อ</th>
-                <th class="hideANDseek">รุ่น</th>
-                <th>ขนาด</th>
-                <th>คงเหลือ</th>
-                <th class="hideANDseek">หน่วยนับ</th>
+                <th class="Rowpointer">วันที่รับเข้า</th>
+                <th class="Rowpointer">Code</th>
+                <th class="hideANDseek Rowpointer">หมายเลขเครื่อง</th>
+                <th class="hideANDseek Rowpointer">รายละเอียด</th>
+                <th class="hideANDseek Rowpointer">ยี่ห้อ</th>
+                <th class="hideANDseek Rowpointer">รุ่น</th>
+                <th class="Rowpointer">ขนาด</th>
+                <th class="Rowpointer">คงเหลือ</th>
+                <th class="hideANDseek Rowpointer">หน่วยนับ</th>
                 <th></th>
             </tr>
         </thead>
