--- a/Alpha/AlphaMvc/Views/SecurityProfile/IndexSecurityProfile.cshtml
+++ b/Alpha/AlphaMvc/Views/SecurityProfile/IndexSecurityProfile.cshtml
@@ -36,8 +36,8 @@
 <table class="barattach-2">
     <tr>
         <td>
-            <label class="topictable">Security Profile</label>
-            <a href="/SecurityProfile/CreateSecurityProfile"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" class="imgadd" id="admincreateDisable" /></a>
+            <label class="topicmargin-size67">Security Profile</label>
+            <a href="/SecurityProfile/CreateSecurityProfile"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" id="admincreateDisable" /></a>
             <div class="topicText">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
         </td>
     </tr>
@@ -46,9 +46,9 @@
 <table class="table table-striped">
     <thead class="bgthead">
         <tr>
-            <th>No.</th>
+            <th class="Rowpointer">No.</th>
             <th class="hidecolumn">ID</th>
-            <th>รายละเอียด</th>
+            <th class="Rowpointer">รายละเอียด</th>
             <th></th>
         </tr>
     </thead>
