--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -57,29 +57,7 @@
     </head>
     <body>
         <header>
-            @*<nav class="navbar navbar-inverse">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                        <a class="navbar-brand" href="#">WebSiteName</a>
-                    </div>
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Page 1-1</a></li>
-                                <li><a href="#">Page 1-2</a></li>
-                                <li><a href="#">Page 1-3</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Page 2</a></li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                    </ul>
-                </div>
-            </nav>*@
+            <div class="menutab"></div>
             <div class="content-wrapper">
                 <div class="float-left">
                     <a href="@Url.Action("Index", "Home")" class="imagelogo"></a>
@@ -89,49 +67,50 @@
                 </div>
                     <label for="show-menu" class="show-menu">Menu ☰</label>
                     <input type="checkbox" id="show-menu" role="button" class="Hidecheckbox">
-                    <ul id="menu" class="menuul">
-                        <li class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Dashboard", "ExpiredTechnician", "Technician")</div></div></li>
-                        <li id="admindisable" class="menuli">
-                            <div class="menua">
-                                <div class="menutext">
-                                    @Html.ActionLink("Administration", "IndexIncomeMaster", "IncomeMaster")
-                                    <ul class="hidden">
-                                        @*<img src="~/Images/iconIncomeMaster.png" />*@
-                                        <li class="menuli"><div class="submenua">@Html.ActionLink("Income", "IndexIncomeMaster", "IncomeMaster")</div></li>
-                                        <li class="menuli"><div class="submenua">@Html.ActionLink("Expense", "IndexExpenseMaster", "ExpenseMaster")</div></li>
-                                        <li class="menuli"><div class="submenua">@Html.ActionLink("SecurityProfile", "IndexSecurityProfile", "SecurityProfile")</div></li>
-                                        <li class="menuli"><div class="submenua">@Html.ActionLink("User", "IndexUser", "User")</div></li>
-                                    </ul>
+                    
+                        <ul id="menu" class="menuul">
+                            <li class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Dashboard", "ExpiredTechnician", "Technician")</div></div></li>
+                            <li id="admindisable" class="menuli">
+                                <div class="menua">
+                                    <div class="menutext">
+                                        @Html.ActionLink("Administration", "IndexIncomeMaster", "IncomeMaster")
+                                        <ul class="hidden">
+                                            @*<img src="~/Images/iconIncomeMaster.png" />*@
+                                            <li class="menuli"><div class="submenua">@Html.ActionLink("Income", "IndexIncomeMaster", "IncomeMaster")</div></li>
+                                            <li class="menuli"><div class="submenua">@Html.ActionLink("Expense", "IndexExpenseMaster", "ExpenseMaster")</div></li>
+                                            <li class="menuli"><div class="submenua">@Html.ActionLink("SecurityProfile", "IndexSecurityProfile", "SecurityProfile")</div></li>
+                                            <li class="menuli"><div class="submenua">@Html.ActionLink("User", "IndexUser", "User")</div></li>
+                                        </ul>
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        @*<li class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Warning", "ExpiredTechnician", "Technician")</div></div></li>*@
-                        <li class="menuli">
-                            <div class="menua">
-                                <div class="menutext">
-                                    @Html.ActionLink("Calendar", "IndexCalendarJob", "CalendarJob")
-                                    <ul class="hidden">
-                                        <li class="menuli"><div class="submenua">@Html.ActionLink("Job", "IndexCalendarJob", "CalendarJob")</div></li>
-                                        <li class="menuli"><div class="submenua">@Html.ActionLink("Man Power", "IndexCMP", "CalendarManPower")</div></li>
-                                    </ul>
+                            </li>
+                            @*<li class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Warning", "ExpiredTechnician", "Technician")</div></div></li>*@
+                            <li class="menuli">
+                                <div class="menua">
+                                    <div class="menutext">
+                                        @Html.ActionLink("Calendar", "IndexCalendarJob", "CalendarJob")
+                                        <ul class="hidden">
+                                            <li class="menuli"><div class="submenua">@Html.ActionLink("Job", "IndexCalendarJob", "CalendarJob")</div></li>
+                                            <li class="menuli"><div class="submenua">@Html.ActionLink("Man Power", "IndexCMP", "CalendarManPower")</div></li>
+                                        </ul>
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li id="TechcreateDisable" class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Technician", "IndexTechnician", "Technician")</div></div></li>
-                        <li id="productsdisable" class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Products", "IndexProducts", "Products")</div></div></li>
-                        <li id="BDCdisable" class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Break Down Cost", "IndexBDC", "BDC")</div></div></li>
-                        <li class="menuli">
-                            <div class="menua">
-                                <div class="menutext">
-                                    @Html.ActionLink("Payment", "IndexWageTeachnician", "WageTeachnician")
-                                    <ul class="hidden">
-                                        <li class="menuli"><div class="submenua">@Html.ActionLink("Technician", "IndexWageTeachnician", "WageTeachnician")</div></li>
-                                        @*<li class="menuli"><div class="submenua">@Html.ActionLink("Vendor", "IndexWageVendor", "WageVendor")</div></li>*@
-                                    </ul>
+                            </li>
+                            <li id="TechcreateDisable" class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Technician", "IndexTechnician", "Technician")</div></div></li>
+                            <li id="productsdisable" class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Products", "IndexProducts", "Products")</div></div></li>
+                            <li id="BDCdisable" class="menuli"><div class="menua"><div class="menutext">@Html.ActionLink("Break Down Cost", "IndexBDC", "BDC")</div></div></li>
+                            <li class="menuli">
+                                <div class="menua">
+                                    <div class="menutext">
+                                        @Html.ActionLink("Payment", "IndexWageTeachnician", "WageTeachnician")
+                                        <ul class="hidden">
+                                            <li class="menuli"><div class="submenua">@Html.ActionLink("Technician", "IndexWageTeachnician", "WageTeachnician")</div></li>
+                                            @*<li class="menuli"><div class="submenua">@Html.ActionLink("Vendor", "IndexWageVendor", "WageVendor")</div></li>*@
+                                        </ul>
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                    </ul>
+                            </li>
+                        </ul>
                 </div>
             
         </header>
