--- a/Alpha/AlphaMvc/Views/User/IndexUser.cshtml
+++ b/Alpha/AlphaMvc/Views/User/IndexUser.cshtml
@@ -45,13 +45,13 @@
     <table class="table table-striped">
         <thead class="bgthead">
             <tr>
-                <th>No.</th>
+                <th class="Rowpointer">No.</th>
                 <th class="hidecolumn">ID</th>
-                <th>UserName</th>
-                <th>Name</th>
-                <th>Email</th>
-                <th>UserStatus</th>
-                <th>SecurityProfile</th>
+                <th class="Rowpointer">UserName</th>
+                <th class="Rowpointer">Name</th>
+                <th class="Rowpointer">Email</th>
+                <th class="Rowpointer">UserStatus</th>
+                <th class="Rowpointer">SecurityProfile</th>
                 <th></th>
             </tr>
         </thead>
