--- a/Alpha/AlphaMvc/Views/WageTeachnician/IndexWageTeachnician.cshtml
+++ b/Alpha/AlphaMvc/Views/WageTeachnician/IndexWageTeachnician.cshtml
@@ -4,16 +4,24 @@
 
 <script src="@Url.Content("~/Scripts/EditableGrid/paging.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/CUDS/WageTechnician/IndexWageTechnician.js")" type="text/javascript"></script>
+<table class="barattach-2">
+    <tr>
+        <td>
+            <label class="topictable">WageTeachnician</label>
+            <div class="topicText">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
+        </td>
+    </tr>
+</table>
 <table class="table table-striped">
     <thead class="bgthead">
         <tr>
             <th>No.</th>
-            <th>Emp ID</th>
-            <th class="hideANDseek">HR Code</th>
-            <th>FullName</th>
-            <th class="hideANDseek">Type</th>
-            <th>Position</th>
-            <th class="hideANDseek">Grade</th>
+            <th class="Rowpointer">Emp ID</th>
+            <th class="hideANDseek Rowpointer">HR Code</th>
+            <th class="Rowpointer">FullName</th>
+            <th class="hideANDseek Rowpointer">Type</th>
+            <th class="Rowpointer">Position</th>
+            <th class="hideANDseek Rowpointer">Grade</th>
             <th></th>
         </tr>
     </thead>
