--- a/Alpha/AlphaMvc/Views/Login/IndexLogin.cshtml
+++ b/Alpha/AlphaMvc/Views/Login/IndexLogin.cshtml
@@ -24,7 +24,8 @@
             <button type="button" value="Login" onClick="UserLogin()"/>Login
 
         </div>
-
+        <div class="copyright-1">© 2017 Alpha Group Co., Ltd. All Rights Reserved</div>
+        
         @*<div class="container">
             <button type="button" id="btnCancel" class="cancelbtn">Cancel</button>
         </div>*@
