--- a/Alpha/AlphaMvc/Views/Borrow/CreateBorrow.cshtml
+++ b/Alpha/AlphaMvc/Views/Borrow/CreateBorrow.cshtml
@@ -7,7 +7,7 @@
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
     <!-- Modal -->
 <div class="modal fade" id="productDialog" role="dialog">
-    <div class="modal-dialog">
+    <div class="modal-dialog" style="margin-top: -300px;">
 
         <!-- Modal content-->
         <div class="modal-content">
