--- a/Alpha/AlphaMvc/Views/Borrow/EditBorrow.cshtml
+++ b/Alpha/AlphaMvc/Views/Borrow/EditBorrow.cshtml
@@ -6,7 +6,7 @@
 <script src="@Url.Content("~/Scripts/CUDS/JobOrderBorrow/EditJobOrderBorrow.js")" type="text/javascript"></script>
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 <div class="modal fade" id="productDialog" role="dialog">
-    <div class="modal-dialog">
+    <div class="modal-dialog" style="margin-top: -300px;">
 
         <!-- Modal content-->
         <div class="modal-content">
