--- a/Alpha/AlphaMvc/Views/Borrow/CreateBorrow.cshtml
+++ b/Alpha/AlphaMvc/Views/Borrow/CreateBorrow.cshtml
@@ -61,13 +61,13 @@
                     <label class="label-small">ยี่ห้อ</label>&nbsp;<label class="label-small-3">รุ่น</label>
                 </li>
                 <li>
-                    <input type="text" id="txtBrand" name="field1" class="field-select-small" placeholder="ยี่ห้อ" />&nbsp;<input type="text" name="field2" id="txtModel" class="field-select-small" placeholder="รุ่น"/>
+                    <input type="text" id="txtBrand" name="field1" class="field-select-small" placeholder="" />&nbsp;<input type="text" name="field2" id="txtModel" class="field-select-small" placeholder=""/>
                 </li>
                 <li>
                     <label class="label-small">ขนาด</label>&nbsp;<label class="label-small-3">จำนวนที่ยืม</label>
                 </li>
                 <li>
-                    <input type="text" id="txtSize" name="field1" class="field-select-small" placeholder="ขนาด" />&nbsp;<input type="text" name="field2" id="txtAmount" class="field-select-small" placeholder="จำนวน" />
+                    <input type="text" id="txtSize" name="field1" class="field-select-small" placeholder="" />&nbsp;<input type="text" name="field2" id="txtAmount" class="field-select-small" placeholder="" />
                 </li>
                 
                 <li>
