--- a/Alpha/AlphaMvc/Views/Borrow/EditBorrow.cshtml
+++ b/Alpha/AlphaMvc/Views/Borrow/EditBorrow.cshtml
@@ -61,13 +61,13 @@
                     <label class="label-small">ยี่ห้อ</label>&nbsp;<label class="label-small-3">รุ่น</label>
                 </li>
                 <li>
-                    <input type="text" id="txtBrand" name="field1" class="field-select-small" placeholder="ยี่ห้อ" />&nbsp;<input type="text" name="field2" id="txtModel" class="field-select-small" placeholder="รุ่น" />
+                    <input type="text" id="txtBrand" name="field1" class="field-select-small" placeholder="" />&nbsp;<input type="text" name="field2" id="txtModel" class="field-select-small" placeholder="" />
                 </li>
                 <li>
                     <label class="label-small">ขนาด</label>&nbsp;<label class="label-small-3">จำนวนที่ยืม</label>
                 </li>
                 <li>
-                    <input type="text" id="txtSize" name="field1" class="field-select-small" placeholder="ขนาด" />&nbsp;<input type="text" name="field2" id="txtAmount" class="field-select-small" placeholder="จำนวน" />
+                    <input type="text" id="txtSize" name="field1" class="field-select-small" placeholder="" />&nbsp;<input type="text" name="field2" id="txtAmount" class="field-select-small" placeholder="" />
                 </li>
 
                 <li>
@@ -84,7 +84,7 @@
                     <label class="label-small-2">ดี</label>&nbsp;<label class="label-small-2">หาย</label>&nbsp;<label class="label-small">ซ่อม</label>&nbsp;<label class="label-small-2">ชำรุด</label>
                 </li>
                 <li>
-                    <input type="text" id="txtReturnGood" name="field6" class="field-select-small" placeholder="ดี" />&nbsp;<input type="text" name="field6" id="txtReturnLost" class="field-select-small" placeholder="หาย" />&nbsp;<input type="text" id="txtReturnRepair" name="field7" class="field-select-small" placeholder="ซ่อม" />&nbsp;<input type="text" id="txtReturnBad" name="field8" class="field-select-small" placeholder="ชำรุด" />
+                    <input type="text" id="txtReturnGood" name="field6" class="field-select-small" placeholder="" />&nbsp;<input type="text" name="field6" id="txtReturnLost" class="field-select-small" placeholder="" />&nbsp;<input type="text" id="txtReturnRepair" name="field7" class="field-select-small" placeholder="" />&nbsp;<input type="text" id="txtReturnBad" name="field8" class="field-select-small" placeholder="" />
                 </li>
                 <li>
                     <button type="button" class="btn btn-primary" onclick="ConfirmDialog('Update', 'JobOrderBorrow', @Request.Params["id"])">Save</button>
