--- a/Alpha/AlphaMvc/Content/Style.css
+++ b/Alpha/AlphaMvc/Content/Style.css
@@ -2,6 +2,15 @@
     -webkit-appearance: none;
     display: none;
 }
+.btnprint{
+    float: left;
+    position: absolute;
+    /* padding-top: 5px; */
+    /* margin-left: 5px; */
+    margin-top: 1px;
+    margin-left: 10px;
+    z-index: 1;
+}
 .nopointer{
     cursor: default !important;
 }
