--- a/Alpha/AlphaMvc/Views/ExpenseMaster/CreateExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/CreateExpenseMaster.cshtml
@@ -15,7 +15,7 @@
         <ul class="form-style">
             <li>
                 <label>Detail<span class="required">*</span></label>
-                <input type="text" id="txtDetail" class="field-divided text-floatleft" placeholder="Detail" />&nbsp;<button type="button" class="btn btn-primary" onclick="Isvalidate('Create', 'ExpenseMaster', 0)">Save</button>
+                <input type="text" id="txtDetail" class="field-divided text-floatleft" placeholder="" />&nbsp;<button type="button" class="btn btn-primary" onclick="Isvalidate('Create', 'ExpenseMaster', 0)">Save</button>
             </li>
         </ul>
         <br />
