--- a/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/EditProducts.cshtml
@@ -28,7 +28,7 @@
                     <label class="label-2" style="margin-right: 25%;">Serial Number <span class="required">*</span></label>&nbsp;<label class="label-2" style="margin-right: 10%;">หมายเลขเครื่อง<span class="required">*</span></label>
                 </li>
                 <li>
-                    <input type="text" id="txtSerialNo" name="field1" class="field-divided" placeholder="Serial" autofocus required />&nbsp;<input type="text" id="txtMachineNo" name="field1" class="field-divided" placeholder="หมายเลขเครื่อง" required />
+                    <input type="text" id="txtSerialNo" name="field1" class="field-divided" placeholder="" autofocus required />&nbsp;<input type="text" id="txtMachineNo" name="field1" class="field-divided" required />
                 </li>
                 <li>
                     <label>ประเภทสินค้า</label>
@@ -38,31 +38,31 @@
                     <label class="label-2" style="margin-right: 42%;">ยี่ห้อ<span class="required">*</span></label>&nbsp;<label class="label-2">ขนาด<span class="required">*</span></label>
                 </li>
                 <li>
-                    <input type="text" id="txtBrand" name="field1" class="field-divided" placeholder="ยี่ห้อ" />&nbsp;<input type="text" id="txtSize" name="field2" class="field-select-small" placeholder="ขนาด" />
+                    <input type="text" id="txtBrand" name="field1" class="field-divided" placeholder="" />&nbsp;<input type="text" id="txtSize" name="field2" class="field-select-small"  />
                 </li>
                 <li>
                     <label class="label-2" style="margin-right: 45%;">รุ่น<span class="required">*</span></label>&nbsp;<label class="label-2">อายุใช้งาน</label>
                 </li>
                 <li>
-                    <input type="text" id="txtModel" name="field2" class="field-divided" placeholder="รุ่น" />&nbsp;<input type="text" id="txtLifetime" name="field2" class="field-select-small" placeholder="อายุใช้งาน" />&nbsp;<label class="label-3">ปี</label>
+                    <input type="text" id="txtModel" name="field2" class="field-divided" placeholder="" />&nbsp;<input type="text" id="txtLifetime" name="field2" class="field-select-small"  />&nbsp;<label class="label-3">ปี</label>
                 </li>
                 <li>
                     <label class="label-big">รับเข้า<span class="required">*</span></label>&nbsp;<label class="label-small">หน่วยนับ</label>
                 </li>
                 <li>
-                    <input type="text" id="dtReceiveDate" class="field-divided" placeholder="วันที่รับเข้า" required/>&nbsp;<select id="cmbUnitWeight" name="cmbUnitWeight" class="field-select-small-2"></select>
+                    <input type="text" id="dtReceiveDate" class="field-divided"  required/>&nbsp;<select id="cmbUnitWeight" name="cmbUnitWeight" class="field-select-small-2"></select>
                 </li>
                 <li>
                     <label class="label-small">ยกมา<span class="required">*</span></label>&nbsp;<label class="label-small-3">คงเหลือ<span class="required">*</span></label>
                 </li>
                 <li>
-                    <input type="text" id="txtBalance" name="field1" class="field-select-small" placeholder="ยกมา" required/>&nbsp;<input type="text" id="txtRemain" name="field2" class="field-select-small" placeholder="คงเหลือ" required />
+                    <input type="text" id="txtBalance" name="field1" class="field-select-small"  required/>&nbsp;<input type="text" id="txtRemain" name="field2" class="field-select-small"  required />
                 </li>
                 <li>
                     <label class="label-small-2">หาย</label>&nbsp;<label class="label-small-2">ซ่อม</label>&nbsp;<label class="label-small-2">ชำรุด</label>
                 </li>
                 <li>
-                    <input type="text" id="txtLost" name="field6" class="field-select-small" placeholder="หาย" disabled />&nbsp;<input type="text" id="txtRepair" name="field7" class="field-select-small" placeholder="ซ่อม" disabled />&nbsp;<input type="text" id="txtBreak" name="field8" class="field-select-small" placeholder="ชำรุด" disabled />
+                    <input type="text" id="txtLost" name="field6" class="field-select-small"  disabled />&nbsp;<input type="text" id="txtRepair" name="field7" class="field-select-small"  disabled />&nbsp;<input type="text" id="txtBreak" name="field8" class="field-select-small"  disabled />
                 </li>
             </ul>
             <ul class="form-style-1">
