--- a/Alpha/AlphaMvc/Views/SecurityProfile/CreateSecurityProfile.cshtml
+++ b/Alpha/AlphaMvc/Views/SecurityProfile/CreateSecurityProfile.cshtml
@@ -12,7 +12,7 @@
             <ul class="form-style">
                 <li>
                     <label>Profile<span class="required">*</span></label>
-                    <input type="text" id="txtProfile" class="field-divided text-floatleft" placeholder="Profile" />&nbsp;<button type="button" class="btn btn-primary" onclick="Isvalidate('Create', 'SecurityProfile', 0)">Save</button>
+                    <input type="text" id="txtProfile" class="field-divided text-floatleft" placeholder="" />&nbsp;<button type="button" class="btn btn-primary" onclick="Isvalidate('Create', 'SecurityProfile', 0)">Save</button>
                 </li>
             </ul>
             <br />
