--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -127,6 +127,12 @@
         </ul>
         <ul class="form-style-1">
             <li>
+                <label class="label-2">Job Site</label>&nbsp;<label class="label-2">Location</label>
+            </li>
+            <li>
+                <input type="text" id="txtJobSite" name="field1" class="field-divided" placeholder="" />&nbsp;<input type="text" id="txtLocation" name="field1" class="field-divided" placeholder="" />
+            </li>
+            <li>
                 <label>หมายเหตุ</label>
                 <textarea name="field5" id="txtRemark" class="field-long field-textarea"></textarea>
             </li>
@@ -548,13 +554,13 @@
                                                         </td>
                                                         <td>
                                                             <select class="ManDay select-size50">
-                                                                <option value="1">อา</option>
-                                                                <option value="2">จ</option>
-                                                                <option value="3">อ</option>
+                                                                <option value="0">อา</option>
+                                                                <option value="1">จ</option>
+                                                                <option value="2">อ</option>
                                                                 <option value="3">พ</option>
-                                                                <option value="3">พฤ</option>
-                                                                <option value="3">ศ</option>
-                                                                <option value="3">ส</option>
+                                                                <option value="4">พฤ</option>
+                                                                <option value="5">ศ</option>
+                                                                <option value="6">ส</option>
                                                             </select>
                                                         </td>
                                                         <td>
