--- a/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
+++ b/Alpha/AlphaMvc/Views/CalendarJob/IndexCalendarJob.cshtml
@@ -7,6 +7,7 @@
 <script src="@Url.Content("~/Scripts/lib/moment.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/lib/jquery.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/calendar/fullcalendar.min.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Scripts/CUDS/CalendarJob/CalendarJob.js")" type="text/javascript"></script>
 
 <script>
 function GetDetail(currentMonth) {
@@ -74,15 +75,18 @@ $(document).ready(function () {
     $('#body').attr("style", "background-color: #fbfbf1; clear: both; padding-bottom: 3%;");
 
     GetDetail(currentMonth);
+    GetCalendarlist(currentMonth);
     $('#calendar').on('click', '.fc-next-button', function () {
         var currentMonth = $('#calendar').fullCalendar('getDate');
         currentMonth = parseInt(currentMonth.format('M'));
         GetDetail(currentMonth);
+        GetCalendarlist(currentMonth);
     });
     $('#calendar').on('click', '.fc-prev-button', function () {
         var currentMonth = $('#calendar').fullCalendar('getDate');
         currentMonth = parseInt(currentMonth.format('M'));
         GetDetail(currentMonth);
+        GetCalendarlist(currentMonth);
     });
 });
 
@@ -103,4 +107,28 @@ $(document).ready(function () {
 
 </style>
 <div id="calendar"></div>
+<table class="barattach-2">
+    <tr>
+        <td>
+            <label class="topicmargin-size67">Calendar Job</label>
+            @*<a href="/IncomeMaster/CreateIncomeMaster"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" id="admincreateDisable" /></a>*@
+            <div class="topicText">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
+        </td>
+    </tr>
+</table>
+<table class="table table-striped">
+    <thead class="bgthead">
+        <tr>
+            <th class="Rowpointer">No.</th>
+            <th class="hidecolumn Rowpointer">ID</th>
+            <th class="Rowpointer">JobNo</th>
+            <th class="Rowpointer">TypeWorkingName</th>
+            <th class="Rowpointer">JobDate</th>
+            <th class="Rowpointer">SWorking</th>
+            <th class="Rowpointer">EWorking</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody id="result"></tbody>
+</table>
 
