--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -98,6 +98,7 @@
                 <li>
                     <input type="text" id="dtJobDate" class="field-divided" placeholder=""  required />&nbsp;<input type="text" id="txtCar" name="field1" class="field-divided" placeholder="รถปิกอัพ" autofocus/>
                     <input type="hidden" id="hidJobDate" />
+                    <input type="hidden" id="hidJobID" />
                 </li>
                 <li>
                     <label class="label-2">วันเริ่มทำงาน<span class="required">*</span></label>&nbsp;<label class="label-2">วันจบงาน<span class="required">*</span></label>
@@ -162,6 +163,12 @@
                </li>
             </ul>
             <ul class="form-style-1">
+                <li>
+                    <label class="label-2">Job Site</label>&nbsp;<label class="label-2">Location</label>
+                </li>
+                <li>
+                    <input type="text" id="txtJobSite" name="field1" class="field-divided" placeholder="" />&nbsp;<input type="text" id="txtLocation" name="field1" class="field-divided" placeholder="" />
+                </li>
                 <li>
                     <label>หมายเหตุ</label>
                     <textarea name="field5" id="txtRemark" class="field-long field-textarea"></textarea>
@@ -841,7 +848,7 @@
                                         </div>
                                         <div>
                                             <div class="barattach-2">
-                                                <a href="@Url.Action("CreateBorrow", "Borrow")" class="alink"><img src="@Url.Content("~/Images/btnadd.png")" class="btnimage-4" /></a>
+                                                <a onclick="CreateJobOrderBorrow()" class="alink"><img style="cursor:hand" src="@Url.Content("~/Images/btnadd.png")" class="btnimage-4" /></a>
                                             </div>
                                             <div class="grigbar">
                                                 <table class="table table-striped">
